fix: optimize query