@@ -7,6 +7,7 @@ import com.soundbook.common.exception.ErrorCode;
 import com.soundbook.dto.feed.*;
 import com.soundbook.dto.taste.MatchUserResponse;
 import com.soundbook.entity.*;
+import com.soundbook.entity.enums.CommentStatus;
 import com.soundbook.entity.enums.PostType;
 import com.soundbook.entity.enums.ReactionType;
 import com.soundbook.entity.enums.TargetType;
@@ -14,7 +15,6 @@ import com.soundbook.entity.enums.Visibility;
 import com.soundbook.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -24,7 +24,6 @@ import java.text.Normalizer;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -32,7 +31,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class FeedService {
 
-    private static final int DEFAULT_LIMIT = 20;
+    private static final int DEFAULT_LIMIT = 10;
     private static final int MAX_LIMIT = 50;
     private static final List<Visibility> FOLLOWING_VISIBLE = List.of(Visibility.PUBLIC, Visibility.FOLLOWERS);
 
@@ -44,231 +43,70 @@ public class FeedService {
     private final CommentRepository commentRepository;
     private final ReactionRepository reactionRepository;
     private final FollowRepository followRepository;
-    private final FriendshipRepository friendshipRepository;
-    private final FriendRequestRepository friendRequestRepository;
     private final TasteDnaService tasteDnaService;
     private final ObjectMapper objectMapper = new ObjectMapper();
-    private final RedisTemplate<String, Object> redisTemplate;
-
-//    @Transactional(readOnly = true)
-//    public FeedResponse getFeed(String email, String tab, Integer limit) {
-//        User currentUser = userRepository.findByEmail(email).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
-//        String normalizedTab = normalizeTab(tab);
-//        int normalizedLimit = normalizeLimit(limit);
-//
-//        Set<Long> followingIds = followRepository.findByIdFollowerId(currentUser.getId()).stream()
-//                .map(follow -> follow.getFollowee().getId())
-//                .collect(Collectors.toCollection(LinkedHashSet::new));
-//
-//        List<MatchUserResponse> matchSuggestions = tasteDnaService.getRecommendedMatches(email, 24);
-//        Map<Long, MatchUserResponse> matchByUserId = matchSuggestions.stream()
-//                .collect(Collectors.toMap(MatchUserResponse::getUserId, Function.identity(), (left, right) -> left, LinkedHashMap::new));
-//
-//        List<Post> candidates = findCandidatePosts(currentUser, normalizedTab, normalizedLimit, followingIds);
-//        if (candidates.isEmpty() && "following".equals(normalizedTab)) {
-//            candidates = findCandidatePosts(currentUser, "discover", normalizedLimit, followingIds);
-//        }
-//
-//        UserTasteDna currentTaste = userTasteDnaRepository.findById(currentUser.getId()).orElse(null);
-//        Map<String, Double> currentMusic = currentTaste == null ? Collections.emptyMap() : readMap(currentTaste.getMusicVectorJson());
-//        Map<String, Double> currentBook = currentTaste == null ? Collections.emptyMap() : readMap(currentTaste.getBookVectorJson());
-//
-//        List<FeedPostResponse> posts = candidates.stream()
-//                .map(post -> buildPostResponse(post, currentUser, currentMusic, currentBook, matchByUserId))
-//                .sorted(feedComparator(normalizedTab))
-//                .limit(normalizedLimit)
-//                .collect(Collectors.toList());
-//
-//        List<MatchUserResponse> filteredSuggestions = matchSuggestions.stream()
-//                .filter(match -> !followingIds.contains(match.getUserId()))
-//                .filter(match -> !match.getUserId().equals(currentUser.getId()))
-//                .filter(match -> !friendshipRepository.existsByIdUserIdAndIdFriendId(currentUser.getId(), match.getUserId()))
-//                .filter(match -> friendRequestRepository.findFirstByRequester_IdAndReceiver_IdAndStatus(currentUser.getId(), match.getUserId(), com.soundbook.entity.enums.FriendRequestStatus.PENDING).isEmpty())
-//                .filter(match -> friendRequestRepository.findFirstByRequester_IdAndReceiver_IdAndStatus(match.getUserId(), currentUser.getId(), com.soundbook.entity.enums.FriendRequestStatus.PENDING).isEmpty())
-//                .limit(6)
-//                .collect(Collectors.toList());
-//
-//        return FeedResponse.builder()
-//                .tab(normalizedTab)
-//                .posts(posts)
-//                .friendSuggestions(filteredSuggestions)
-//                .trending(buildTrending(posts))
-//                .build();
-//    }
 
     @Transactional(readOnly = true)
-    @SuppressWarnings("unchecked")
     public FeedResponse getFeed(String email, String tab, Integer limit, Integer offset) {
-
+        // 1. Viewer
         User currentUser = userRepository.findByEmail(email)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
         String normalizedTab = normalizeTab(tab);
         int normalizedLimit = normalizeLimit(limit);
+        int safeOffset = Math.max(0, offset == null ? 0 : offset);
 
-        String cacheKey = "feed:"
-                + currentUser.getId()
-                + ":"
-                + normalizedTab;
-
-        // Check redis
-        Object cached = redisTemplate.opsForValue().get(cacheKey);
-
-        if (cached != null) {
-
-            System.out.println("Redis HIT: " + cacheKey);
-
-            FeedResponse cachedFeed = (FeedResponse) cached;
-
-            List<FeedPostResponse> cachedPosts = cachedFeed.getPosts() == null
-                    ? Collections.emptyList()
-                    : cachedFeed.getPosts()
-                    .stream()
-                    .limit(normalizedLimit)
-                    .collect(Collectors.toList());
-
-            return FeedResponse.builder()
-                    .tab(cachedFeed.getTab())
-                    .posts(cachedPosts)
-                    .friendSuggestions(cachedFeed.getFriendSuggestions())
-                    .trending(buildTrending(cachedPosts))
-                    .build();
-        }
-
-        System.out.println("Redis MISS: " + cacheKey);
-
-        // Redis miss
-        Set<Long> followingIds = followRepository
-                .findByIdFollowerId(currentUser.getId())
-                .stream()
-                .map(follow -> follow.getFollowee().getId())
-                .collect(Collectors.toCollection(LinkedHashSet::new));
-
-        List<MatchUserResponse> matchSuggestions =
-                tasteDnaService.getRecommendedMatches(email, 24);
-
-        Map<Long, MatchUserResponse> matchByUserId =
-                matchSuggestions.stream()
-                        .collect(Collectors.toMap(
-                                MatchUserResponse::getUserId,
-                                Function.identity(),
-                                (left, right) -> left,
-                                LinkedHashMap::new
-                        ));
-
-        int cacheLimit = MAX_LIMIT;
+        // 2. Candidate posts
+        Set<Long> followingIds = "following".equals(normalizedTab)
+                ? followRepository.findByIdFollowerId(currentUser.getId()).stream()
+                        .map(follow -> follow.getFollowee().getId())
+                        .collect(Collectors.toCollection(LinkedHashSet::new))
+                : Collections.emptySet();
 
         List<Post> candidates = findCandidatePosts(
                 currentUser,
                 normalizedTab,
-                cacheLimit,
+                normalizedLimit,
+                safeOffset,
                 followingIds
         );
 
-        if (candidates.isEmpty() && "following".equals(normalizedTab)) {
+        if (candidates.isEmpty() && "following".equals(normalizedTab) && safeOffset == 0) {
             candidates = findCandidatePosts(
                     currentUser,
                     "discover",
-                    cacheLimit,
-                    followingIds
+                    normalizedLimit,
+                    0,
+                    Collections.emptySet()
             );
         }
 
-        UserTasteDna currentTaste =
-                userTasteDnaRepository.findById(currentUser.getId())
-                        .orElse(null);
+        // 3. Batch build DTOs
+        List<FeedPostResponse> posts = buildPostResponsesBatch(currentUser, candidates);
 
-        Map<String, Double> currentMusic =
-                currentTaste == null
-                        ? Collections.emptyMap()
-                        : readMap(currentTaste.getMusicVectorJson());
+        // 4. Friend suggestions (chỉ load ở trang đầu offset = 0)
+        List<MatchUserResponse> filteredSuggestions = Collections.emptyList();
+        if (safeOffset == 0) {
+            try {
+                filteredSuggestions = tasteDnaService.getRecommendedMatches(email, 6);
+            } catch (Exception ignored) {
+            }
+        }
 
-        Map<String, Double> currentBook =
-                currentTaste == null
-                        ? Collections.emptyMap()
-                        : readMap(currentTaste.getBookVectorJson());
-
-        List<FeedPostResponse> posts = candidates.stream()
-                .map(post -> buildPostResponse(
-                        post,
-                        currentUser,
-                        currentMusic,
-                        currentBook,
-                        matchByUserId
-                ))
-                .sorted(feedComparator(normalizedTab))
-                .limit(cacheLimit)
-                .collect(Collectors.toList());
-
-        List<MatchUserResponse> filteredSuggestions =
-                matchSuggestions.stream()
-                        .filter(match -> !followingIds.contains(match.getUserId()))
-                        .filter(match -> !match.getUserId().equals(currentUser.getId()))
-                        .filter(match -> !friendshipRepository.existsByIdUserIdAndIdFriendId(
-                                currentUser.getId(),
-                                match.getUserId()
-                        ))
-                        .filter(match -> friendRequestRepository
-                                .findFirstByRequester_IdAndReceiver_IdAndStatus(
-                                        currentUser.getId(),
-                                        match.getUserId(),
-                                        com.soundbook.entity.enums.FriendRequestStatus.PENDING
-                                )
-                                .isEmpty()
-                        )
-                        .filter(match -> friendRequestRepository
-                                .findFirstByRequester_IdAndReceiver_IdAndStatus(
-                                        match.getUserId(),
-                                        currentUser.getId(),
-                                        com.soundbook.entity.enums.FriendRequestStatus.PENDING
-                                )
-                                .isEmpty()
-                        )
-                        .limit(6)
-                        .collect(Collectors.toList());
-
-        // Full feed
-        FeedResponse feed = FeedResponse.builder()
+        return FeedResponse.builder()
                 .tab(normalizedTab)
                 .posts(posts)
                 .friendSuggestions(filteredSuggestions)
                 .trending(buildTrending(posts))
-                .build();
-
-       // Save to redis - 2 mins
-        redisTemplate.opsForValue().set(
-                cacheKey,
-                feed,
-                2,
-                TimeUnit.MINUTES
-        );
-
-        List<FeedPostResponse> pagedPosts = feed.getPosts()
-                        .stream()
-                        .skip(Math.max(0, offset == null ? 0 : offset))
-                        .limit(normalizedLimit)
-                        .collect(Collectors.toList());
-
-        return FeedResponse.builder()
-                .tab(feed.getTab())
-                .posts(pagedPosts)
-                .friendSuggestions(feed.getFriendSuggestions())
-                .trending(buildTrending(
-                        feed.getPosts()
-                                .stream()
-                                .limit(normalizedLimit)
-                                .collect(Collectors.toList())
-                ))
-                .hasMore(!pagedPosts.isEmpty() && pagedPosts.size() == normalizedLimit)
+                .hasMore(!posts.isEmpty() && posts.size() == normalizedLimit)
                 .build();
     }
-
 
     @Transactional(readOnly = true)
     public FeedPostResponse getPost(String email, Long postId) {
         User currentUser = userRepository.findByEmail(email).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
         Post post = postRepository.findById(postId).orElseThrow(() -> new AppException(ErrorCode.INVALID_REQUEST));
-        return buildPostResponsesForRequester(currentUser, List.of(post), 1).stream()
+        return buildPostResponsesBatch(currentUser, List.of(post)).stream()
                 .findFirst()
                 .orElseThrow(() -> new AppException(ErrorCode.INVALID_REQUEST));
     }
@@ -278,7 +116,7 @@ public class FeedService {
         User currentUser = userRepository.findByEmail(email).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
         int normalizedLimit = normalizeLimit(limit);
         List<Post> posts = postRepository.findByUser_IdOrderByCreatedAtDesc(profileUserId, PageRequest.of(0, normalizedLimit));
-        return buildPostResponsesForRequester(currentUser, posts, normalizedLimit);
+        return buildPostResponsesBatch(currentUser, posts);
     }
 
     @Transactional(readOnly = true)
@@ -286,7 +124,7 @@ public class FeedService {
         User currentUser = userRepository.findByEmail(email).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
         int normalizedSize = Math.max(1, Math.min(size, 50));
         List<Post> posts = postRepository.findByUser_IdOrderByCreatedAtDesc(profileUserId, PageRequest.of(page, normalizedSize));
-        return buildPostResponsesForRequester(currentUser, posts, normalizedSize);
+        return buildPostResponsesBatch(currentUser, posts);
     }
 
     @Transactional(readOnly = true)
@@ -298,37 +136,123 @@ public class FeedService {
         }
         int normalizedLimit = normalizeLimit(limit);
         List<Post> posts = postRepository.searchPublicPosts(normalizedKeyword, Visibility.PUBLIC, PageRequest.of(0, normalizedLimit));
-        return buildPostResponsesForRequester(currentUser, posts, normalizedLimit);
+        return buildPostResponsesBatch(currentUser, posts);
     }
 
-    private List<FeedPostResponse> buildPostResponsesForRequester(User currentUser, List<Post> posts, int limit) {
-        UserTasteDna currentTaste = userTasteDnaRepository.findById(currentUser.getId()).orElse(null);
-        Map<String, Double> currentMusic = currentTaste == null ? Collections.emptyMap() : readMap(currentTaste.getMusicVectorJson());
-        Map<String, Double> currentBook = currentTaste == null ? Collections.emptyMap() : readMap(currentTaste.getBookVectorJson());
-
-        Map<Long, MatchUserResponse> matchByUserId = new LinkedHashMap<>();
-        for (Post post : posts) {
-            Long authorId = post.getUser().getId();
-            if (!authorId.equals(currentUser.getId()) && !matchByUserId.containsKey(authorId)) {
-                try {
-                    MatchUserResponse match = tasteDnaService.getMatchWithUser(currentUser.getEmail(), authorId);
-                    if (match != null) {
-                        matchByUserId.put(authorId, match);
-                    }
-                } catch (Exception ignored) {
-                    // Taste DNA is optional for legacy users/posts.
-                }
-            }
+    // Optimize feed
+    private List<FeedPostResponse> buildPostResponsesBatch(User currentUser, List<Post> posts) {
+        if (posts == null || posts.isEmpty()) {
+            return Collections.emptyList();
         }
 
-        return posts.stream()
-                .map(post -> buildPostResponse(post, currentUser, currentMusic, currentBook, matchByUserId))
-                .limit(limit)
-                .collect(Collectors.toList());
+        Long viewerId = currentUser.getId();
+        List<Long> postIds = posts.stream().map(Post::getId).toList();
+        Set<Long> authorIds = posts.stream().map(p -> p.getUser().getId()).collect(Collectors.toSet());
+
+        // 1. Batch User Profiles (1 query)
+        Map<Long, UserProfile> profileMap = userProfileRepository.findAllById(authorIds).stream()
+                .collect(Collectors.toMap(UserProfile::getUserId, Function.identity(), (a, b) -> a));
+
+        // 2. Batch Follow Status (1 query)
+        Set<Long> followedAuthorIds = followRepository.findFollowedAuthorIds(viewerId, authorIds);
+
+        // 3. Batch Post Media (1 query)
+        List<PostMedia> medias = postMediaRepository.findByPost_IdInOrderByPost_IdAscIdAsc(postIds);
+        Map<Long, PostMedia> firstMediaMap = new HashMap<>();
+        for (PostMedia media : medias) {
+            firstMediaMap.putIfAbsent(media.getPost().getId(), media);
+        }
+
+        // 4. Viewer Taste DNA (1 query)
+        UserTasteDna viewerTaste = userTasteDnaRepository.findById(viewerId).orElse(null);
+        Map<String, Double> viewerMusic = viewerTaste == null ? Collections.emptyMap() : readMap(viewerTaste.getMusicVectorJson());
+        Map<String, Double> viewerBook = viewerTaste == null ? Collections.emptyMap() : readMap(viewerTaste.getBookVectorJson());
+
+        // 5. Author Taste DNA (1 query)
+        Map<Long, UserTasteDna> authorTasteMap = userTasteDnaRepository.findAllById(authorIds).stream()
+                .collect(Collectors.toMap(UserTasteDna::getUserId, Function.identity(), (a, b) -> a));
+
+        // 6. Reaction Summary (1 query GROUP BY)
+        List<ReactionSummaryProjection> reactionRows = reactionRepository.findReactionSummary(TargetType.POST, postIds);
+        Map<Long, Map<ReactionType, Long>> reactionSummaryMap = new HashMap<>();
+        for (ReactionSummaryProjection row : reactionRows) {
+            reactionSummaryMap
+                    .computeIfAbsent(row.getTargetId(), id -> new EnumMap<>(ReactionType.class))
+                    .put(row.getReactionType(), row.getTotal());
+        }
+
+        // 7. Comment Counts (1 query GROUP BY)
+        Map<Long, Long> commentCountMap = commentRepository.countCommentsByPostIds(postIds, CommentStatus.DELETED).stream()
+                .collect(Collectors.toMap(CommentCountProjection::getPostId, CommentCountProjection::getTotal, (a, b) -> a));
+
+        // 8. Viewer Reactions (1 query)
+        Map<Long, ReactionType> viewerReactionMap = reactionRepository.findViewerReactions(viewerId, TargetType.POST, postIds).stream()
+                .collect(Collectors.toMap(Reaction::getTargetId, Reaction::getReactionType, (a, b) -> a));
+
+        // 9. DTO Mapping hoàn toàn trong RAM (0 database queries)
+        return posts.stream().map(post -> {
+            Long postId = post.getId();
+            Long authorId = post.getUser().getId();
+            UserProfile profile = profileMap.get(authorId);
+            PostMedia media = firstMediaMap.get(postId);
+            boolean isFollowing = followedAuthorIds.contains(authorId);
+            UserTasteDna authorTaste = authorTasteMap.get(authorId);
+
+            double authorMatchScore = Objects.equals(authorId, viewerId)
+                    ? 100.0
+                    : calculateTasteSimilarity(viewerTaste, authorTaste);
+
+            double tasteScore = calculateContentTasteScore(post, viewerMusic, viewerBook);
+
+            Map<ReactionType, Long> reactionsMap = reactionSummaryMap.getOrDefault(postId, Collections.emptyMap());
+            long commentCount = commentCountMap.getOrDefault(postId, 0L);
+
+            FeedReactionSummaryResponse reactions = FeedReactionSummaryResponse.builder()
+                    .like(reactionsMap.getOrDefault(ReactionType.LIKE, 0L))
+                    .heart(reactionsMap.getOrDefault(ReactionType.HEART, 0L))
+                    .fire(reactionsMap.getOrDefault(ReactionType.FIRE, 0L))
+                    .haha(reactionsMap.getOrDefault(ReactionType.HAHA, 0L))
+                    .wow(reactionsMap.getOrDefault(ReactionType.WOW, 0L))
+                    .sad(reactionsMap.getOrDefault(ReactionType.SAD, 0L))
+                    .angry(reactionsMap.getOrDefault(ReactionType.ANGRY, 0L))
+                    .comments(commentCount)
+                    .shares(post.getShareCount() == null ? 0L : post.getShareCount())
+                    .build();
+
+            double engagementScore = Math.min(20, (reactions.getLike() + reactions.getHeart() + reactions.getFire()
+                    + reactions.getHaha() + reactions.getWow() + reactions.getSad() + reactions.getAngry() + reactions.getComments()) * 2.5);
+            double freshnessScore = freshnessScore(post.getCreatedAt());
+            double finalScore = (authorMatchScore * 0.55) + (tasteScore * 0.30) + (engagementScore * 0.10) + (freshnessScore * 0.05);
+
+            ReactionType currentReact = viewerReactionMap.get(postId);
+            List<String> sharedFeatures = findSharedFeatures(viewerTaste, authorTaste);
+
+            return FeedPostResponse.builder()
+                    .id(postId)
+                    .type(mapFeedType(post.getType()))
+                    .caption(post.getCaption())
+                    .contentRich(post.getContentRich())
+                    .moodTag(post.getMoodTag())
+                    .refJson(post.getRefJson())
+                    .user(buildUserResponse(post.getUser(), viewerId, profile, isFollowing))
+                    .media(buildMediaResponse(post, media))
+                    .reactions(reactions)
+                    .comments(Collections.emptyList())
+                    .commentsEnabled(Boolean.TRUE.equals(post.getCommentsEnabled()))
+                    .currentUserReaction(currentReact != null ? currentReact.name() : null)
+                    .canEdit(Objects.equals(authorId, viewerId))
+                    .tasteScore(round2(tasteScore))
+                    .authorMatch(round2(authorMatchScore))
+                    .finalScore(round2(finalScore))
+                    .reason(buildReason(post, authorMatchScore, sharedFeatures, tasteScore))
+                    .createdAt(post.getCreatedAt())
+                    .build();
+        }).collect(Collectors.toList());
     }
 
-    private List<Post> findCandidatePosts(User currentUser, String tab, int limit, Set<Long> followingIds) {
-        int candidateSize = Math.min(MAX_LIMIT * 3, Math.max(limit * 3, 30));
+    private List<Post> findCandidatePosts(User currentUser, String tab, int limit, int offset, Set<Long> followingIds) {
+        int page = offset / limit;
+        PageRequest pageRequest = PageRequest.of(page, limit);
         if ("following".equals(tab)) {
             Set<Long> authorIds = new LinkedHashSet<>(followingIds);
             authorIds.add(currentUser.getId());
@@ -338,160 +262,100 @@ public class FeedService {
             return postRepository.findByUser_IdInAndVisibilityInOrderByCreatedAtDesc(
                     authorIds,
                     FOLLOWING_VISIBLE,
-                    PageRequest.of(0, candidateSize)
+                    pageRequest
             );
         }
-        return postRepository.findByVisibilityOrderByCreatedAtDesc(Visibility.PUBLIC, PageRequest.of(0, candidateSize));
+        return postRepository.findByVisibilityOrderByCreatedAtDesc(Visibility.PUBLIC, pageRequest);
     }
 
-    private Comparator<FeedPostResponse> feedComparator(String tab) {
-        if ("following".equals(tab)) {
-            return Comparator.comparing(FeedPostResponse::getCreatedAt, Comparator.nullsLast(Comparator.reverseOrder()));
-        }
-        return Comparator.comparingDouble(FeedPostResponse::getFinalScore).reversed()
-                .thenComparing(FeedPostResponse::getCreatedAt, Comparator.nullsLast(Comparator.reverseOrder()));
-    }
-
-    private FeedPostResponse buildPostResponse(Post post,
-                                               User currentUser,
-                                               Map<String, Double> currentMusic,
-                                               Map<String, Double> currentBook,
-                                               Map<Long, MatchUserResponse> matchByUserId) {
-        MatchUserResponse authorMatch = matchByUserId.get(post.getUser().getId());
-        double authorMatchScore = authorMatch == null ? (post.getUser().getId().equals(currentUser.getId()) ? 100 : 0) : authorMatch.getFinalMatch();
-        double tasteScore = calculateContentTasteScore(post, currentMusic, currentBook);
-        FeedReactionSummaryResponse reactions = buildReactionSummary(post.getId());
-        double engagementScore = Math.min(20, (reactions.getLike() + reactions.getHeart() + reactions.getFire() + reactions.getHaha() + reactions.getWow() + reactions.getSad() + reactions.getAngry() + reactions.getComments()) * 2.5);
-        double freshnessScore = freshnessScore(post.getCreatedAt());
-        double finalScore = (authorMatchScore * 0.55) + (tasteScore * 0.30) + (engagementScore * 0.10) + (freshnessScore * 0.05);
-
-        return FeedPostResponse.builder()
-                .id(post.getId())
-                .type(mapFeedType(post.getType()))
-                .caption(post.getCaption())
-                .contentRich(post.getContentRich())
-                .moodTag(post.getMoodTag())
-                .refJson(post.getRefJson())
-                .user(buildUserResponse(post.getUser(), currentUser))
-                .media(buildMediaResponse(post))
-                .reactions(reactions)
-                .comments(buildComments(post.getId(), currentUser))
-                .commentsEnabled(Boolean.TRUE.equals(post.getCommentsEnabled()))
-                .currentUserReaction(currentUserReaction(currentUser.getId(), post.getId()))
-                .canEdit(post.getUser().getId().equals(currentUser.getId()))
-                .tasteScore(round2(tasteScore))
-                .authorMatch(round2(authorMatchScore))
-                .finalScore(round2(finalScore))
-                .reason(buildReason(post, authorMatch, tasteScore))
-                .createdAt(post.getCreatedAt())
-                .build();
-    }
-
-    private FeedUserResponse buildUserResponse(User user, User currentUser) {
-        UserProfile profile = userProfileRepository.findById(user.getId()).orElse(null);
-        boolean self = currentUser != null && Objects.equals(user.getId(), currentUser.getId());
-        boolean following = !self && currentUser != null && followRepository.existsByIdFollowerIdAndIdFolloweeId(currentUser.getId(), user.getId());
+    private FeedUserResponse buildUserResponse(User author, Long viewerId, UserProfile profile, boolean isFollowing) {
+        boolean self = Objects.equals(author.getId(), viewerId);
         return FeedUserResponse.builder()
-                .userId(user.getId())
-                .displayName(user.getDisplayName())
+                .userId(author.getId())
+                .displayName(author.getDisplayName())
                 .username(profile == null ? null : profile.getUsername())
                 .avatarUrl(profile == null ? null : profile.getAvatarUrl())
-                .following(following)
+                .following(!self && isFollowing)
                 .self(self)
                 .build();
     }
 
-    private FeedUserResponse buildUserResponse(User user) {
-        UserProfile profile = userProfileRepository.findById(user.getId()).orElse(null);
-        return FeedUserResponse.builder()
-                .userId(user.getId())
-                .displayName(user.getDisplayName())
-                .username(profile == null ? null : profile.getUsername())
-                .avatarUrl(profile == null ? null : profile.getAvatarUrl())
-                .build();
-    }
-
-    private FeedMediaResponse buildMediaResponse(Post post) {
-        Optional<PostMedia> media = postMediaRepository.findFirstByPost_IdOrderByIdAsc(post.getId());
+    private FeedMediaResponse buildMediaResponse(Post post, PostMedia media) {
         RefPayload refPayload = parseRefPayload(post.getRefJson());
         return FeedMediaResponse.builder()
                 .id(refPayload.id())
-                .mediaType(media.map(item -> item.getMediaType().name()).orElse(null))
-                .url(media.map(PostMedia::getUrl).orElse(null))
+                .mediaType(media != null ? media.getMediaType().name() : null)
+                .url(media != null ? media.getUrl() : null)
                 .title(firstNonBlank(refPayload.title(), defaultMediaTitle(post)))
                 .subtitle(firstNonBlank(refPayload.subtitle(), refPayload.artist(), refPayload.author()))
-                .coverUrl(firstNonBlank(refPayload.coverUrl(), media.map(PostMedia::getUrl).orElse(null)))
+                .coverUrl(firstNonBlank(refPayload.coverUrl(), media != null ? media.getUrl() : null))
                 .rating(refPayload.rating())
                 .build();
     }
 
-    private FeedReactionSummaryResponse buildReactionSummary(Long postId) {
-        return FeedReactionSummaryResponse.builder()
-                .like(reactionRepository.countByTargetTypeAndTargetIdAndReactionType(TargetType.POST, postId, ReactionType.LIKE))
-                .heart(reactionRepository.countByTargetTypeAndTargetIdAndReactionType(TargetType.POST, postId, ReactionType.HEART))
-                .fire(reactionRepository.countByTargetTypeAndTargetIdAndReactionType(TargetType.POST, postId, ReactionType.FIRE))
-                .haha(reactionRepository.countByTargetTypeAndTargetIdAndReactionType(TargetType.POST, postId, ReactionType.HAHA))
-                .wow(reactionRepository.countByTargetTypeAndTargetIdAndReactionType(TargetType.POST, postId, ReactionType.WOW))
-                .sad(reactionRepository.countByTargetTypeAndTargetIdAndReactionType(TargetType.POST, postId, ReactionType.SAD))
-                .angry(reactionRepository.countByTargetTypeAndTargetIdAndReactionType(TargetType.POST, postId, ReactionType.ANGRY))
-                .comments(commentRepository.countByPostId(postId))
-                .shares(postRepository.findById(postId).map(post -> post.getShareCount() == null ? 0L : post.getShareCount()).orElse(0L))
-                .build();
-    }
-
-
-    private String currentUserReaction(Long userId, Long postId) {
-        return reactionRepository.findByUser_IdAndTargetTypeAndTargetId(userId, TargetType.POST, postId)
-                .map(reaction -> reaction.getReactionType().name())
-                .orElse(null);
-    }
-
-    private List<FeedCommentResponse> buildComments(Long postId, User currentUser) {
-        List<Comment> comments = commentRepository.findByPostIdAndParentIsNullOrderByCreatedAtDescList(postId);
-        Collections.reverse(comments);
-        return comments.stream()
-                    .map(comment -> FeedCommentResponse.builder()
-                        .id(comment.getId())
-                        .parentId(comment.getParent() != null ? comment.getParent().getId() : null)
-                        .user(buildUserResponse(comment.getUser()))
-                        .text(comment.getContent())
-                        .createdAt(comment.getCreatedAt())
-                        .replyCount(commentRepository.countByParent_IdAndStatusNot(comment.getId(), com.soundbook.entity.enums.CommentStatus.DELETED))
-                        .reactsCount(reactionRepository.countByTargetIdAndTargetType(comment.getId(), TargetType.COMMENT))
-                        .currentUserReaction(reactionRepository.findByUser_IdAndTargetTypeAndTargetId(currentUser.getId(), TargetType.COMMENT, comment.getId())
-                                .map(r -> r.getReactionType().name()).orElse(null))
-                        .build())
-                .collect(Collectors.toList());
-    }
-
     private List<FeedTrendingResponse> buildTrending(List<FeedPostResponse> posts) {
         return posts.stream()
-                .sorted(Comparator.comparingLong(this::engagementCount).reversed()
-                        .thenComparing(FeedPostResponse::getCreatedAt, Comparator.nullsLast(Comparator.reverseOrder())))
                 .limit(5)
                 .map(post -> FeedTrendingResponse.builder()
                         .postId(post.getId())
                         .title(firstNonBlank(post.getMedia() == null ? null : post.getMedia().getTitle(), truncate(post.getCaption(), 48), "Bài viết #" + post.getId()))
                         .subtitle(post.getUser() == null ? "Soundbook" : post.getUser().getDisplayName())
                         .type(post.getType())
-                        .engagementCount(engagementCount(post))
                         .build())
                 .collect(Collectors.toList());
     }
 
-    private long engagementCount(FeedPostResponse post) {
-        if (post == null || post.getReactions() == null) {
-            return 0;
+    private double calculateTasteSimilarity(UserTasteDna viewerTaste, UserTasteDna authorTaste) {
+        if (viewerTaste == null || authorTaste == null) {
+            return 0.0;
         }
-        return post.getReactions().getLike()
-                + post.getReactions().getHeart()
-                + post.getReactions().getFire()
-                + post.getReactions().getHaha()
-                + post.getReactions().getWow()
-                + post.getReactions().getSad()
-                + post.getReactions().getAngry()
-                + post.getReactions().getComments()
-                + post.getReactions().getShares();
+        Map<String, Double> viewerMusic = readMap(viewerTaste.getMusicVectorJson());
+        Map<String, Double> authorMusic = readMap(authorTaste.getMusicVectorJson());
+        Map<String, Double> viewerBook = readMap(viewerTaste.getBookVectorJson());
+        Map<String, Double> authorBook = readMap(authorTaste.getBookVectorJson());
+
+        double musicSim = cosineSimilarity(viewerMusic, authorMusic);
+        double bookSim = cosineSimilarity(viewerBook, authorBook);
+
+        return round2((musicSim * 50.0) + (bookSim * 50.0));
+    }
+
+    private double cosineSimilarity(Map<String, Double> v1, Map<String, Double> v2) {
+        if (v1 == null || v1.isEmpty() || v2 == null || v2.isEmpty()) {
+            return 0.0;
+        }
+        double dot = 0.0;
+        double norm1 = 0.0;
+        double norm2 = 0.0;
+        for (Map.Entry<String, Double> e : v1.entrySet()) {
+            double val1 = e.getValue();
+            norm1 += val1 * val1;
+            Double val2 = v2.get(e.getKey());
+            if (val2 != null) {
+                dot += val1 * val2;
+            }
+        }
+        for (double val2 : v2.values()) {
+            norm2 += val2 * val2;
+        }
+        if (norm1 <= 0 || norm2 <= 0) {
+            return 0.0;
+        }
+        return Math.min(1.0, dot / (Math.sqrt(norm1) * Math.sqrt(norm2)));
+    }
+
+    private List<String> findSharedFeatures(UserTasteDna viewerTaste, UserTasteDna authorTaste) {
+        if (viewerTaste == null || authorTaste == null) return Collections.emptyList();
+        Map<String, Double> v1 = readMap(viewerTaste.getMusicVectorJson());
+        Map<String, Double> v2 = readMap(authorTaste.getMusicVectorJson());
+        List<String> shared = new ArrayList<>();
+        for (String k : v1.keySet()) {
+            if (v2.containsKey(k)) {
+                String clean = k.contains(":") ? k.substring(k.indexOf(':') + 1) : k;
+                if (!clean.isBlank()) shared.add(clean);
+            }
+        }
+        return shared.stream().limit(3).toList();
     }
 
     private double calculateContentTasteScore(Post post, Map<String, Double> currentMusic, Map<String, Double> currentBook) {
@@ -531,12 +395,12 @@ public class FeedService {
         return Math.min(maxContribution, matched * maxContribution * 2);
     }
 
-    private String buildReason(Post post, MatchUserResponse authorMatch, double tasteScore) {
-        if (authorMatch != null && authorMatch.getFinalMatch() >= 60) {
-            String shared = authorMatch.getSharedFeatures() == null || authorMatch.getSharedFeatures().isEmpty()
+    private String buildReason(Post post, double authorMatchScore, List<String> sharedFeatures, double tasteScore) {
+        if (authorMatchScore >= 60) {
+            String shared = sharedFeatures == null || sharedFeatures.isEmpty()
                     ? "gu tương đồng"
-                    : String.join(", ", authorMatch.getSharedFeatures().stream().limit(3).toList());
-            return "Tác giả có " + Math.round(authorMatch.getFinalMatch()) + "% Match với bạn · Chung gu: " + shared;
+                    : String.join(", ", sharedFeatures);
+            return "Tác giả có " + Math.round(authorMatchScore) + "% Match với bạn · Chung gu: " + shared;
         }
         if (tasteScore >= 20) {
             return "Nội dung hợp gu với bạn.";
@@ -591,7 +455,7 @@ public class FeedService {
                 if (refJson.isBlank()) return RefPayload.empty();
                 payload = objectMapper.readValue(refJson, new TypeReference<LinkedHashMap<String, Object>>() {});
             }
-            
+
             return new RefPayload(
                     textValue(payload, "id", "videoId", "itemId"),
                     textValue(payload, "title", "name", "bookTitle", "trackTitle"),
