@@ -5,23 +5,28 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.soundbook.common.exception.AppException;
 import com.soundbook.common.exception.ErrorCode;
 import com.soundbook.dto.feed.FeedPostResponse;
-import com.soundbook.dto.profile.*;
+import com.soundbook.dto.profile.ProfileResponse;
+import com.soundbook.dto.profile.ProfileShelfItemResponse;
+import com.soundbook.dto.profile.ProfileShelfResponse;
+import com.soundbook.dto.profile.ProfileStatsResponse;
 import com.soundbook.dto.social.FriendUserResponse;
 import com.soundbook.dto.taste.MatchUserResponse;
 import com.soundbook.entity.*;
+import com.soundbook.entity.enums.FriendRequestStatus;
 import com.soundbook.entity.enums.Visibility;
 import com.soundbook.repository.*;
 import com.soundbook.service.admin.FileUploadService;
-import io.jsonwebtoken.io.IOException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.context.annotation.Profile;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.time.LocalDateTime;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,7 +35,9 @@ public class ProfileService {
 
     private final UserRepository userRepository;
     private final UserProfileRepository userProfileRepository;
+    private final UserTasteDnaRepository userTasteDnaRepository;
     private final FriendshipRepository friendshipRepository;
+    private final FriendRequestRepository friendRequestRepository;
     private final FollowRepository followRepository;
     private final PostRepository postRepository;
     private final UserMusicCollectionRepository musicCollectionRepository;
@@ -49,26 +56,57 @@ public class ProfileService {
         boolean ownProfile = Objects.equals(requester.getId(), profileUser.getId());
         boolean isFollowing = !ownProfile && followRepository.existsByIdFollowerIdAndIdFolloweeId(requester.getId(), profileUser.getId());
 
-        MatchUserResponse match = null;
-        if (!Objects.equals(requester.getId(), profileUser.getId())) {
-            try {
-                match = tasteDnaService.getMatchWithUser(requester.getEmail(), profileUser.getId());
-            } catch (Exception ignored) {
-                // profile remains usable for users without Taste DNA
+        // Taste DNA Match between viewer and profile owner (0 query nếu dùng calculateSimilarityScore)
+        UserTasteDna viewerTaste = userTasteDnaRepository.findById(requester.getId()).orElse(null);
+        UserTasteDna profileTaste = ownProfile ? viewerTaste : userTasteDnaRepository.findById(profileUser.getId()).orElse(null);
+
+        double matchScore = 0.0;
+        List<String> sharedFeatures = Collections.emptyList();
+        if (!ownProfile && viewerTaste != null && profileTaste != null) {
+            matchScore = tasteDnaService.calculateSimilarityScore(viewerTaste, profileTaste);
+            sharedFeatures = tasteDnaService.getSharedFeatures(viewerTaste, profileTaste);
+        }
+
+        // Direct relationship check (1-2 queries thay vì gọi lặp friendService)
+        String friendshipStatus = "NONE";
+        Long friendRequestId = null;
+        boolean canMessage = false;
+
+        if (ownProfile) {
+            friendshipStatus = "SELF";
+        } else {
+            Set<Long> isFriendSet = friendshipRepository.findFriendIdsIn(requester.getId(), List.of(profileUser.getId()));
+            if (isFriendSet.contains(profileUser.getId())) {
+                friendshipStatus = "FRIENDS";
+                canMessage = true;
+            } else {
+                List<FriendRequest> directRequests = friendRequestRepository.findActiveRequestsIn(
+                        requester.getId(),
+                        List.of(profileUser.getId()),
+                        FriendRequestStatus.PENDING
+                );
+                if (!directRequests.isEmpty()) {
+                    FriendRequest req = directRequests.get(0);
+                    if (req.getRequester().getId().equals(requester.getId())) {
+                        friendshipStatus = "OUTGOING_REQUEST";
+                    } else {
+                        friendshipStatus = "INCOMING_REQUEST";
+                    }
+                    friendRequestId = req.getId();
+                }
             }
         }
 
-        List<FriendUserResponse> friendsPreview = friendshipRepository.findByIdUserIdOrderByCreatedAtDesc(profileUser.getId()).stream()
-                .limit(9)
-                .map(friendship -> friendService.buildFriendUser(requester.getEmail(), friendship.getFriend()))
-                .collect(Collectors.toList());
+        // Friends preview (được tối ưu batching 5-6 queries cho 9 bạn bè)
+        List<FriendUserResponse> friendsPreview = buildFriendsPreview(requester, profileUser);
 
+        // 10 posts ban đầu (đã tối ưu batching)
         List<FeedPostResponse> posts = feedService.getProfilePosts(requester.getEmail(), profileUser.getId(), 10);
 
         return ProfileResponse.builder()
                 .userId(profileUser.getId())
                 .displayName(profileUser.getDisplayName())
-                .email(Objects.equals(requester.getId(), profileUser.getId()) ? profileUser.getEmail() : null)
+                .email(ownProfile ? profileUser.getEmail() : null)
                 .username(profile == null ? null : profile.getUsername())
                 .avatarUrl(profile == null ? null : profile.getAvatarUrl())
                 .coverUrl(profile == null ? null : profile.getCoverUrl())
@@ -85,12 +123,12 @@ public class ProfileService {
                         .followers(followRepository.countByIdFolloweeId(profileUser.getId()))
                         .following(followRepository.countByIdFollowerId(profileUser.getId()))
                         .build())
-                .matchScore(match == null ? 0 : match.getFinalMatch())
-                .sharedFeatures(match == null ? List.of() : match.getSharedFeatures())
-                .friendshipStatus(friendService.friendshipStatus(requester.getId(), profileUser.getId()))
+                .matchScore(matchScore)
+                .sharedFeatures(sharedFeatures)
+                .friendshipStatus(friendshipStatus)
                 .following(isFollowing)
-                .friendRequestId(friendService.friendRequestId(requester.getId(), profileUser.getId()))
-                .canMessage(friendService.canMessage(requester.getId(), profileUser.getId()))
+                .friendRequestId(friendRequestId)
+                .canMessage(canMessage)
                 .friendsPreview(friendsPreview)
                 .shelves(buildShelves(profileUser.getId(), requester, profileUser))
                 .posts(posts)
@@ -103,13 +141,11 @@ public class ProfileService {
         User requester = userRepository.findByEmail(requesterEmail).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
         User targetUser = resolveProfileUser(requester, rawUserId);
 
-        return followRepository.findByIdFolloweeId(targetUser.getId()).stream()
-                .map(follow -> {
-                    User follower = userRepository.findById(follow.getId().getFollowerId()).orElse(null);
-                    return follower != null ? friendService.buildFriendUser(requesterEmail, follower) : null;
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        List<Follow> follows = followRepository.findByIdFolloweeId(targetUser.getId());
+        List<Long> followerIds = follows.stream().map(f -> f.getId().getFollowerId()).toList();
+        List<User> followers = userRepository.findAllById(followerIds);
+
+        return batchBuildFriendUsers(requester, followers, null);
     }
 
     @Transactional(readOnly = true)
@@ -117,13 +153,11 @@ public class ProfileService {
         User requester = userRepository.findByEmail(requesterEmail).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
         User targetUser = resolveProfileUser(requester, rawUserId);
 
-        return followRepository.searchFollowers(targetUser.getId(), query).stream()
-                .map(follow -> {
-                    User follower = userRepository.findById(follow.getId().getFollowerId()).orElse(null);
-                    return follower != null ? friendService.buildFriendUser(requesterEmail, follower) : null;
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        List<Follow> follows = followRepository.searchFollowers(targetUser.getId(), query);
+        List<Long> followerIds = follows.stream().map(f -> f.getId().getFollowerId()).toList();
+        List<User> followers = userRepository.findAllById(followerIds);
+
+        return batchBuildFriendUsers(requester, followers, null);
     }
 
     @Transactional(readOnly = true)
@@ -131,9 +165,127 @@ public class ProfileService {
         User requester = userRepository.findByEmail(requesterEmail).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
         User targetUser = resolveProfileUser(requester, rawUserId);
 
-        return friendshipRepository.findByIdUserIdOrderByCreatedAtDesc(targetUser.getId()).stream()
-                .map(friendship -> friendService.buildFriendUser(requesterEmail, friendship.getFriend()))
-                .collect(Collectors.toList());
+        List<Friendship> friendships = friendshipRepository.findByIdUserIdOrderByCreatedAtDesc(targetUser.getId());
+        List<User> friends = friendships.stream().map(Friendship::getFriend).toList();
+        Map<Long, LocalDateTime> connectedAtMap = friendships.stream()
+                .collect(Collectors.toMap(f -> f.getFriend().getId(), Friendship::getCreatedAt, (a, b) -> a));
+
+        return batchBuildFriendUsers(requester, friends, connectedAtMap);
+    }
+
+    /**
+     * Tối ưu hóa Friends Preview: 5-6 queries cho 9 friends, 0 query N+1 trong loop.
+     */
+    private List<FriendUserResponse> buildFriendsPreview(User requester, User profileUser) {
+        // 1. Chỉ lấy đúng 9 records từ DB
+        List<Friendship> friendships = friendshipRepository.findByIdUserIdOrderByCreatedAtDesc(
+                profileUser.getId(),
+                PageRequest.of(0, 9)
+        );
+
+        if (friendships.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<User> friends = friendships.stream().map(Friendship::getFriend).toList();
+        Map<Long, LocalDateTime> connectedAtMap = friendships.stream()
+                .collect(Collectors.toMap(f -> f.getFriend().getId(), Friendship::getCreatedAt, (a, b) -> a));
+
+        return batchBuildFriendUsers(requester, friends, connectedAtMap);
+    }
+
+    /**
+     * Batch loading pure mapper: gom toàn bộ quan hệ bạn bè, profile, lời mời và taste DNA
+     * trước khi mapping trong RAM.
+     */
+    private List<FriendUserResponse> batchBuildFriendUsers(User requester, List<User> targetUsers, Map<Long, LocalDateTime> connectedAtMap) {
+        if (targetUsers == null || targetUsers.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        Long viewerId = requester.getId();
+        List<Long> targetIds = targetUsers.stream().map(User::getId).distinct().toList();
+
+        // 1. Batch Profiles (1 query)
+        Map<Long, UserProfile> profileMap = userProfileRepository.findAllById(targetIds).stream()
+                .collect(Collectors.toMap(UserProfile::getUserId, Function.identity(), (a, b) -> a));
+
+        // 2. Batch Friendship status (1 query)
+        Set<Long> viewerFriendIds = friendshipRepository.findFriendIdsIn(viewerId, targetIds);
+
+        // 3. Batch Friend Requests 2 chiều (1 query)
+        List<FriendRequest> requests = friendRequestRepository.findActiveRequestsIn(
+                viewerId,
+                targetIds,
+                FriendRequestStatus.PENDING
+        );
+        Map<Long, String> requestStatusMap = new HashMap<>();
+        Map<Long, Long> requestIdMap = new HashMap<>();
+        for (FriendRequest req : requests) {
+            if (req.getRequester().getId().equals(viewerId)) {
+                requestStatusMap.put(req.getReceiver().getId(), "OUTGOING_REQUEST");
+                requestIdMap.put(req.getReceiver().getId(), req.getId());
+            } else {
+                requestStatusMap.put(req.getRequester().getId(), "INCOMING_REQUEST");
+                requestIdMap.put(req.getRequester().getId(), req.getId());
+            }
+        }
+
+        // 4. Viewer Taste DNA (1 query) & Pre-parse vector ONCE outside loop
+        UserTasteDna viewerTaste = userTasteDnaRepository.findById(viewerId).orElse(null);
+        Map<String, Double> viewerMusic = viewerTaste != null ? tasteDnaService.parseVector(viewerTaste.getMusicVectorJson()) : Collections.emptyMap();
+        Map<String, Double> viewerBook = viewerTaste != null ? tasteDnaService.parseVector(viewerTaste.getBookVectorJson()) : Collections.emptyMap();
+        double wMusic = (viewerTaste != null && viewerTaste.getWMusic() != null) ? viewerTaste.getWMusic().doubleValue() : 0.5;
+        double wBook = (viewerTaste != null && viewerTaste.getWBook() != null) ? viewerTaste.getWBook().doubleValue() : 0.5;
+        double cMusic = (viewerTaste != null && viewerTaste.getMusicConfidence() != null) ? viewerTaste.getMusicConfidence().doubleValue() : 0.5;
+        double cBook = (viewerTaste != null && viewerTaste.getBookConfidence() != null) ? viewerTaste.getBookConfidence().doubleValue() : 0.5;
+
+        // 5. Batch Target Users Taste DNA (1 query)
+        Map<Long, UserTasteDna> targetTasteMap = userTasteDnaRepository.findAllById(targetIds).stream()
+                .collect(Collectors.toMap(UserTasteDna::getUserId, Function.identity(), (a, b) -> a));
+
+        // 6. Pure in-memory DTO construction (0 database queries)
+        return targetUsers.stream().map(user -> {
+            Long userId = user.getId();
+            UserProfile profile = profileMap.get(userId);
+            UserTasteDna targetTaste = targetTasteMap.get(userId);
+
+            String status;
+            Long requestId = null;
+            if (Objects.equals(viewerId, userId)) {
+                status = "SELF";
+            } else if (viewerFriendIds.contains(userId)) {
+                status = "FRIENDS";
+            } else if (requestStatusMap.containsKey(userId)) {
+                status = requestStatusMap.get(userId);
+                requestId = requestIdMap.get(userId);
+            } else {
+                status = "NONE";
+            }
+
+            double matchScore = (viewerTaste != null && targetTaste != null)
+                    ? tasteDnaService.calculateSimilarityScore(viewerMusic, viewerBook, wMusic, wBook, cMusic, cBook, targetTaste)
+                    : 0.0;
+            List<String> sharedFeatures = (viewerTaste != null && targetTaste != null)
+                    ? tasteDnaService.getSharedFeatures(viewerMusic, viewerBook, targetTaste)
+                    : Collections.emptyList();
+
+            LocalDateTime connectedAt = connectedAtMap != null ? connectedAtMap.get(userId) : null;
+
+            return FriendUserResponse.builder()
+                    .userId(userId)
+                    .displayName(user.getDisplayName())
+                    .username(profile != null ? profile.getUsername() : null)
+                    .avatarUrl(profile != null ? profile.getAvatarUrl() : null)
+                    .bio(profile != null ? profile.getBio() : null)
+                    .matchScore(matchScore)
+                    .sharedFeatures(sharedFeatures)
+                    .friendshipStatus(status)
+                    .requestId(requestId)
+                    .canMessage("FRIENDS".equals(status))
+                    .connectedAt(connectedAt)
+                    .build();
+        }).toList();
     }
 
     private User resolveProfileUser(User requester, String rawUserId) {
@@ -218,8 +370,7 @@ public class ProfileService {
         return false;
     }
 
-    public void updateAvatar(Long userId, MultipartFile file) throws java.io.IOException
-    {
+    public void updateAvatar(Long userId, MultipartFile file) throws java.io.IOException {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
@@ -229,8 +380,7 @@ public class ProfileService {
         userRepository.save(user);
     }
 
-    public void updateCover(Long userId, MultipartFile file) throws java.io.IOException
-    {
+    public void updateCover(Long userId, MultipartFile file) throws java.io.IOException {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
